<package>
  <name>wheeled_robin</name>
  <version>1.0.0</version>
  <description>The wheeled_robin stack provides all the basic drivers for running and using a WheeledRobin robot.</description>
  <maintainer email="joh.mayr@jku.at">Johannes Mayr</maintainer>
  <license>BSD</license>
  <url type="website">http://ros.org/wiki/wheeled_robin</url>
  <url type="repository">https://github.com/robinJKU/wheeled_robin</url>
  <url type="bugtracker">https://github.com/robinJKU/wheeled_robin/issues</url>
  <author email="joh.mayr@jku.at">Johannes Mayr</author>
  <author email="klemens.springer@jku.at">Klemens Springer</author>
  
  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>wheeled_robin_driver</run_depend>
  <run_depend>wheeled_robin_node</run_depend>
  <run_depend>wheeled_robin_description</run_depend>
  <run_depend>wheeled_robin_bringup</run_depend>
  
  <export>
    <metapackage/>
  </export>
</package>
