<?xml version="1.0"?>
<package>
  <name>wheeled_robin_node</name>
  <version>1.0.0</version>
  <description>The wheeled_robin_node package</description>

  <maintainer email="joh.mayr@jku.at">Johannes Mayr</maintainer>
  <license>BSD</license>
  <url type="website">http://ros.org/wiki/wheeled_robin_node</url>
  <url type="repository">https://github.com/robinJKU/wheeled_robin</url>
  <url type="bugtracker">https://github.com/robinJKU/wheeled_robin/issues</url>
  <author email="joh.mayr@jku.at">Johannes Mayr</author>
  <author email="klemens.springer@jku.at">Klemens Springer</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>wheeled_robin_driver</build_depend>
  <build_depend>diagnostic_msgs</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>tf</build_depend>

  <run_depend>wheeled_robin_driver</run_depend>
  <run_depend>diagnostic_msgs</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>python_orocos_kdl</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>tf</run_depend>
  
  <export>
    <rosdoc config="rosdoc.yaml" />
  </export>
</package>
